// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingUsage component should display loader 1`] = `
<BillingUsage
  currentUsage={
    Immutable.Map {
    }
  }
  fetchCurrentUsage={[Function]}
>
  <Loader
    inline={false}
  >
    <div
      className="loader-container"
    >
      <div
        className="loader-inner"
      >
        <i
          className="fa fa-fw fa-circle-o-notch fa-spin"
        />
      </div>
    </div>
  </Loader>
</BillingUsage>
`;

exports[`BillingUsage component should display price 1`] = `
<BillingUsage
  currentUsage={
    Immutable.Map {
      meta: Immutable.Map {
        start_datetime: "2010-10-10",
        end_datetime: "2010-10-11",
      },
      data: Immutable.Map {
        cost: 10,
        tickets: 10,
      },
    }
  }
  fetchCurrentUsage={[Function]}
>
  <div
    className="mb-4"
  >
    <h4>
      Extra tickets cost:
       
      <small
        className="text-faded"
      >
        Oct 10
         - 
        Oct 11
      </small>
    </h4>
    <Row
      className="mb-2"
      tag="div"
    >
      <div
        className="mb-2 row"
      >
        <Col
          sm="4"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="col col-sm-4"
          >
            <CardGroup
              tag="div"
            >
              <div
                className="card-group"
              >
                <Card
                  block={true}
                  className="text-center"
                  tag="div"
                >
                  <div
                    className="text-center card card-block"
                  >
                    <h3>
                      10
                    </h3>
                    <div>
                      tickets
                    </div>
                  </div>
                </Card>
                <Card
                  block={true}
                  className="text-center"
                  tag="div"
                >
                  <div
                    className="text-center card card-block"
                  >
                    <h3>
                      $
                      10
                    </h3>
                    <div>
                      cost
                    </div>
                  </div>
                </Card>
              </div>
            </CardGroup>
          </div>
        </Col>
      </div>
    </Row>
    <p>
      If you have any questions or if you want to unsubscribe, please contact us at 
      <a
        href="mailto:support@gorgias.io"
      >
        support@gorgias.io
      </a>
       or
       
      <a
        href=""
        onClick={[Function]}
      >
        Live Chat
      </a>
      .
    </p>
  </div>
</BillingUsage>
`;

exports[`BillingUsage component should load with empty props 1`] = `
<BillingUsage
  currentUsage={
    Immutable.Map {
      meta: Immutable.Map {
        start_datetime: "2010-10-10",
        end_datetime: "2010-10-11",
      },
    }
  }
  fetchCurrentUsage={[Function]}
>
  <div
    className="mb-4"
  >
    <h4>
      Extra tickets cost:
       
      <small
        className="text-faded"
      >
        Oct 10
         - 
        Oct 11
      </small>
    </h4>
    <Row
      className="mb-2"
      tag="div"
    >
      <div
        className="mb-2 row"
      >
        <Col
          sm="4"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="col col-sm-4"
          >
            <CardGroup
              tag="div"
            >
              <div
                className="card-group"
              >
                <Card
                  block={true}
                  className="text-center"
                  tag="div"
                >
                  <div
                    className="text-center card card-block"
                  >
                    <h3 />
                    <div>
                      tickets
                    </div>
                  </div>
                </Card>
                <Card
                  block={true}
                  className="text-center"
                  tag="div"
                >
                  <div
                    className="text-center card card-block"
                  >
                    <h3>
                      $
                    </h3>
                    <div>
                      cost
                    </div>
                  </div>
                </Card>
              </div>
            </CardGroup>
          </div>
        </Col>
      </div>
    </Row>
    <p>
      If you have any questions or if you want to unsubscribe, please contact us at 
      <a
        href="mailto:support@gorgias.io"
      >
        support@gorgias.io
      </a>
       or
       
      <a
        href=""
        onClick={[Function]}
      >
        Live Chat
      </a>
      .
    </p>
  </div>
</BillingUsage>
`;
